# python-exercism

./: .gitignore
card-games/: lists.py  pyproject.toml
chaitanas-colossal-coaster/: list_methods.py  pyproject.toml
isbn-verifier/: isbn_verifier.py  pyproject.toml
little-sisters-vocab/: pyproject.toml  strings.py
markdown/: markdown.py  pyproject.toml
meltdown-mitigation/: main.py
