[tool.poetry]
name = "strings"
version = "0.1.0"
description = ""
authors = ["maria.kotlyarevskaya <maria.kotlyarevskaya@hilbertteam.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
